--- a/.github/workflows/build-han-3plus.yml
+++ b/.github/workflows/build-han-3plus.yml
@@ -118,7 +118,7 @@ jobs:
           # The new sharded processor generates all shards at once, but we only need the han-3plus shard
           echo "Running the main program with reduced writers and a limit for testing..."
           # Use fewer writers and add a limit for testing
-          go run cmd/kiokun/main.go --writers 8 
+          go run cmd/kiokun/main.go --writers 8 --mode han-3plus
           echo "Generated $(find output_han_3plus -type f | wc -l) files"
 
       - name: Setup Git
