--- a/.github/workflows/build-dictionaries-matrix.yml
+++ b/.github/workflows/build-dictionaries-matrix.yml
@@ -300,5 +300,5 @@ jobs:
           # Create commit
           git commit -m "Update ${{ matrix.shard-type }} dictionary files"
 
-          # Force push to completely replace contents
-          git push -f origin main:main
+          # Force push to completely replace contents without caring about remote state
+          git push --force origin main:main
