--- a/.github/workflows/build-han-2char.yml
+++ b/.github/workflows/build-han-2char.yml
@@ -153,5 +153,5 @@ jobs:
           # Create commit
           git commit -m "Update Han 2-character dictionary files"
 
-          # Force push to completely replace contents
-          git push -f origin main:main
+          # Force push to completely replace contents without caring about remote state
+          git push --force origin main:main
