--- a/.github/workflows/build-han-3plus.yml
+++ b/.github/workflows/build-han-3plus.yml
@@ -144,5 +144,5 @@ jobs:
           # Create commit
           git commit -m "Update Han 3+ character dictionary files"
 
-          # Force push to completely replace contents
-          git push -f origin main:main
+          # Force push to completely replace contents without caring about remote state
+          git push --force origin main:main
