Add retry logic to GitHub Actions push to handle concurrent access
- Added retry mechanism with exponential backoff for git push operations
- This resolves the 'cannot lock ref' errors when multiple builds try to push simultaneously
- Each build will retry up to 5 times with increasing delays (10, 20, 30, 40, 50 seconds)
- Fixes the issue where all 4 shard builds were failing at the push step

--- a/.github/workflows/build-dictionaries-matrix.yml
+++ b/.github/workflows/build-dictionaries-matrix.yml
@@ -301,4 +301,18 @@ jobs:
           git commit -m "Update ${{ matrix.shard-type }} dictionary files"
 
           # Force push to completely replace contents without caring about remote state
-          git push --force origin main:main
+          # Add retry logic to handle concurrent pushes
+          for i in {1..5}; do
+            echo "Push attempt $i..."
+            if git push --force origin main:main; then
+              echo "Push successful on attempt $i"
+              break
+            else
+              echo "Push failed on attempt $i, waiting before retry..."
+              sleep $((i * 10))  # Wait 10, 20, 30, 40, 50 seconds
+              if [ $i -eq 5 ]; then
+                echo "All push attempts failed"
+                exit 1
+              fi
+            fi
+          done
